--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR + YouTube di Dalam AR</title>
+  <title>AR + YouTube LEBAR DEPAN MODEL</title>
   
   <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   
-  <!-- KOMPONEN a-html (WAJIB UNTUK IFRAME DI AR) -->
+  <!-- KOMPONEN a-html (WAJIB UNTUK IFRAME) -->
   <script src="https://cdn.jsdelivr.net/gh/diarmuidobriain/aframe-html-shader@master/a-html.min.js"></script>
 
   <style>
@@ -80,12 +80,12 @@
         rotation-control>
       </a-entity>
 
-      <!-- VIDEO YOUTUBE DI AR (pakai a-html) -->
+      <!-- VIDEO LEBAR DEPAN MODEL -->
       <a-html
         id="youtubeVideo"
         width="2.4"
         height="1.35"
-        position="0 0.5 -0.8"
+        position="0 0.5 0.8"
         rotation="0 0 0"
         visible="false">
       </a-html>
@@ -108,7 +108,7 @@
       document.getElementById('arScene').style.display = 'block';
     });
 
-    // MARKER DETECTED → MODEL + VIDEO
+    // MARKER DETECTED
     AFRAME.registerComponent('registerevents', {
       init: function () {
         const marker = this.el;
@@ -130,9 +130,9 @@
             z: THREE.MathUtils.radToDeg(rot.z)
           });
 
-          // Pindahkan video (belakang model)
+          // VIDEO DEPAN MODEL (LEBAR)
           scene.appendChild(video);
-          video.setAttribute('position', { x: pos.x, y: pos.y + 0.5, z: pos.z - 0.8 });
+          video.setAttribute('position', { x: pos.x, y: pos.y + 0.5, z: pos.z + 0.8 }); // DEPAN
           video.setAttribute('rotation', {
             x: THREE.MathUtils.radToDeg(rot.x),
             y: THREE.MathUtils.radToDeg(rot.y) + 90,
@@ -142,15 +142,14 @@
           // Buat iframe
           const iframe = document.createElement('iframe');
           iframe.src = `https://www.youtube.com/embed/${YOUTUBE_ID}?autoplay=1&loop=1&playlist=${YOUTUBE_ID}&controls=1&modestbranding=1&rel=0`;
-          iframe.allow = 'accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture';
+          iframe.allow = 'autoplay; encrypted-media; picture-in-picture';
           iframe.allowFullscreen = true;
           iframe.style = 'width:100%; height:100%; border:none;';
 
-          // Masukkan ke a-html
           video.setAttribute('src', iframe);
           video.setAttribute('visible', 'true');
 
-          console.log('Video YouTube berhasil dimuat di AR!');
+          console.log('Video YouTube LEBAR DEPAN MODEL berhasil dimuat!');
 
           marker.setAttribute('visible', false);
         });
