--- a/index.html
+++ b/index.html
@@ -3,65 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR + YouTube LEBAR DEPAN MODEL</title>
+  <title>AR + YouTube (PASTI MUNCUL)</title>
   
   <!-- A-Frame + AR.js -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  
-  <!-- KOMPONEN a-html (WAJIB UNTUK IFRAME) -->
-  <script src="https://cdn.jsdelivr.net/gh/diarmuidobriain/aframe-html-shader@master/a-html.min.js"></script>
 
   <style>
     body { margin: 0; overflow: hidden; background: #000; }
-    
-    #startButton {
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1000;
-      background: #FF0000;
-      color: white;
-      border: none;
-      padding: 20px 40px;
-      font-size: 24px;
-      font-weight: bold;
-      border-radius: 50px;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-    #startButton:hover { background: #CC0000; }
-    .play-icon {
-      width: 32px; height: 32px;
-      background: white; border-radius: 50%;
-      display: flex; align-items: center; justify-content: center;
-    }
-    .play-icon::after {
-      content: ''; width: 0; height: 0;
-      border-left: 12px solid #FF0000;
-      border-top: 8px solid transparent;
-      border-bottom: 8px solid transparent;
-      margin-left: 3px;
-    }
-    .hidden { display: none !important; }
   </style>
 </head>
 <body>
 
-  <!-- TOMBOL MULAI -->
-  <button id="startButton">
-    <div class="play-icon"></div>
-    MULAI AR & VIDEO
-  </button>
-
   <!-- A-SCENE -->
   <a-scene
-    id="arScene"
     embedded
-    style="display: none;"
     arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
     renderer="logarithmicDepthBuffer: true;"
     vr-mode-ui="enabled: false">
@@ -80,20 +36,45 @@
         rotation-control>
       </a-entity>
 
-      <!-- VIDEO LEBAR DEPAN MODEL -->
-      <a-html
-        id="youtubeVideo"
+      <!-- TOMBOL PLAY (di AR, depan model) -->
+      <a-entity id="playButton" position="0 0.5 0.8">
+        <a-box
+          depth="0.02"
+          width="1.2"
+          height="1.2"
+          material="opacity: 0; transparent: true"
+          class="clickable"
+          youtube-player>
+        </a-box>
+
+        <!-- Visual Tombol -->
+        <a-cylinder radius="0.22" height="0.04" color="white" opacity="0.95" position="0 0 0.02"></a-cylinder>
+        <a-triangle position="0.07 0 0.03" scale="0.18 0.22 1" rotation="0 0 90" color="#FF0000"></a-triangle>
+        <a-text value="PLAY" color="white" align="center" width="3" position="0 -0.35 0.03" font="mozillavr"></a-text>
+      </a-entity>
+
+      <!-- VIDEO YOUTUBE (lebar, depan model) -->
+      <a-plane
+        id="videoPlane"
         width="2.4"
         height="1.35"
         position="0 0.5 0.8"
-        rotation="0 0 0"
+        material="color: #000"
         visible="false">
-      </a-html>
+      </a-plane>
 
     </a-marker>
 
-    <!-- KAMERA -->
-    <a-entity camera></a-entity>
+    <!-- KAMERA + CURSOR -->
+    <a-entity camera>
+      <a-entity
+        cursor="fuse: false"
+        position="0 0 -1"
+        geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+        material="color: cyan; shader: flat"
+        raycaster="objects: .clickable; far: 1000">
+      </a-entity>
+    </a-entity>
 
   </a-scene>
 
@@ -101,57 +82,58 @@
   <script>
     const YOUTUBE_ID = '0YbJySC88OI';
 
-    // TOMBOL MULAI
-    document.getElementById('startButton').addEventListener('click', () => {
-      console.log('%c[START] AR & Video Dimulai', 'color: lime; font-weight: bold;');
-      document.getElementById('startButton').classList.add('hidden');
-      document.getElementById('arScene').style.display = 'block';
-    });
-
-    // MARKER DETECTED
+    // Pindahkan model + tombol + video
     AFRAME.registerComponent('registerevents', {
       init: function () {
         const marker = this.el;
         marker.addEventListener('markerFound', () => {
           console.log('Marker ditemukan!');
-
           const model = document.querySelector('#arModel');
-          const video = document.querySelector('#youtubeVideo');
+          const btn = document.querySelector('#playButton');
+          const video = document.querySelector('#videoPlane');
           const scene = document.querySelector('a-scene');
           const pos = marker.object3D.position.clone();
           const rot = marker.object3D.rotation.clone();
 
-          // Pindahkan model
-          scene.appendChild(model);
-          model.setAttribute('position', pos);
-          model.setAttribute('rotation', {
-            x: THREE.MathUtils.radToDeg(rot.x),
-            y: THREE.MathUtils.radToDeg(rot.y) + 90,
-            z: THREE.MathUtils.radToDeg(rot.z)
+          // Pindahkan semua
+          [model, btn, video].forEach(el => {
+            scene.appendChild(el);
+            el.setAttribute('position', { x: pos.x, y: pos.y + 0.5, z: pos.z + (el.id === 'videoPlane' ? 0.8 : 0.8) });
+            el.setAttribute('rotation', {
+              x: THREE.MathUtils.radToDeg(rot.x),
+              y: THREE.MathUtils.radToDeg(rot.y) + 90,
+              z: THREE.MathUtils.radToDeg(rot.z)
+            });
           });
 
-          // VIDEO DEPAN MODEL (LEBAR)
-          scene.appendChild(video);
-          video.setAttribute('position', { x: pos.x, y: pos.y + 0.5, z: pos.z + 0.8 }); // DEPAN
-          video.setAttribute('rotation', {
-            x: THREE.MathUtils.radToDeg(rot.x),
-            y: THREE.MathUtils.radToDeg(rot.y) + 90,
-            z: THREE.MathUtils.radToDeg(rot.z)
-          });
+          marker.setAttribute('visible', false);
+        });
+      }
+    });
 
-          // Buat iframe
+    // KLIK TOMBOL → VIDEO MUNCUL
+    AFRAME.registerComponent('youtube-player', {
+      init: function () {
+        this.el.addEventListener('click', () => {
+          console.log('%c[TOMBOL PLAY DIKLIK!]', 'color: lime; font-weight: bold;');
+
+          const videoPlane = document.querySelector('#videoPlane');
           const iframe = document.createElement('iframe');
+          
           iframe.src = `https://www.youtube.com/embed/${YOUTUBE_ID}?autoplay=1&loop=1&playlist=${YOUTUBE_ID}&controls=1&modestbranding=1&rel=0`;
           iframe.allow = 'autoplay; encrypted-media; picture-in-picture';
           iframe.allowFullscreen = true;
           iframe.style = 'width:100%; height:100%; border:none;';
 
-          video.setAttribute('src', iframe);
-          video.setAttribute('visible', 'true');
+          // PAKAI SHADER HTML
+          videoPlane.setAttribute('material', 'src', iframe);
+          videoPlane.setAttribute('material', 'shader', 'html');
+          videoPlane.setAttribute('visible', 'true');
 
-          console.log('Video YouTube LEBAR DEPAN MODEL berhasil dimuat!');
+          // Hapus tombol
+          document.querySelector('#playButton').remove();
 
-          marker.setAttribute('visible', false);
+          console.log('Video berhasil dimuat di AR!');
         });
       }
     });
